balanced: used medium_power ALPM policy
This policy sets the link to the second lowest power
state (PARTIAL) when there is no I/O on the disk. This
mode is designed to allow transitions in link power states
(for example during times of intermittent heavy I/O and
idle I/O) with as small impact on performance as possible.

This may save significant amount of power in idle periods
of the link, especially on laptops. E.g. on x240 the average
AC power consumption dropped from approx. 5 W to only 2.5 W.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -78,23 +78,26 @@ At the moment we're providing the following pre defined profiles:
 .BI "balanced"
 It is the default profile. It provides balanced power saving and performance.
 At the moment it enables CPU and disk plugins of tuned and it makes sure the
-ondemand governor is active (if supported by the current cpufreq driver). It
-sets the CPU energy performance bias to normal. It also enables AC97 audio
-power saving or (it depends on your system) HDA-Intel power savings with 10
-seconds timeout. In case your system contains supported Radeon graphics card
-(with enabled KMS) it configures it to automatic power saving.
+ondemand governor is active (if supported by the current cpufreq driver).
+It enables ALPM power saving for SATA host adapters and sets the link power
+management policy to medium_power. It also sets the CPU energy performance
+bias to normal. It also enables AC97 audio power saving or (it depends on
+your system) HDA-Intel power savings with 10 seconds timeout. In case your
+system contains supported Radeon graphics card (with enabled KMS) it
+configures it to automatic power saving.
 
 .TP
 .BI "powersave"
 Maximal power saving, at the moment it enables USB autosuspend (in case
 environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving
-for SATA host adapters, enables WiFi power saving, enables multi core power
-savings scheduler for low wakeup systems and makes sure the ondemand governor
-is active (if supported by the current cpufreq driver). It sets the CPU energy
-performance bias to powersave. It also enables AC97 audio power saving or (it
-depends on your system) HDA-Intel power savings (with 10 seconds timeout).
-In case your system contains supported Radeon graphics card (with enabled KMS)
-it configures it to automatic power saving. On Asus Eee PCs dynamic Super
+for SATA host adapters and sets the link power manamgent policy to min_power.
+It also enables WiFi power saving, enables multi core power savings scheduler
+for low wakeup systems and makes sure the ondemand governor is active (if
+supported by the current cpufreq driver). It sets the CPU energy performance
+bias to powersave. It also enables AC97 audio power saving or (it depends on
+your system) HDA-Intel power savings (with 10 seconds timeout). In case your
+system contains supported Radeon graphics card (with enabled KMS) it
+configures it to automatic power saving. On Asus Eee PCs dynamic Super
 Hybrid Engine is enabled.
 
 .TP
