profiles: sap profile renamed to sap-netweaver
This profile is performance optimized for running SAP NetWeaver
based applications on bare metal.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -153,10 +153,10 @@ profile. It additionally increases SELinux AVC cache, PID limit and tunes
 netfilter connections tracking.
 
 .TP
-.BI "sap"
-Profile optimized for the best performance of SAP software. It is based on
-throughput\-performance profile. It additionally tunes sysctl settings
-regarding shared memory, semaphores and maximum number of memory map
+.BI "sap-netweaver"
+Profile optimized for the best performance of SAP NetWeaver based applications.
+It is based on throughput\-performance profile. It additionally tunes sysctl
+settings regarding shared memory, semaphores and maximum number of memory map
 areas a process may have.
 
 .SH PREDEFINED COMPAT PROFILES
