--- a/doc/tuned-adm.1
+++ b/doc/tuned-adm.1
@@ -102,7 +102,7 @@ Profile optimized for virtual guests based on enterprise-storage profile. It add
 Profile optimized for virtual hosts based on enterprise-storage profile. It additionally decreases virtual memory swapiness and enables more aggresive writeback of dirty pages.
 
 .TP
-.BI "sap"
+.BI "sap-netweaver"
 Profile optimized for the best performance of SAP software. It is based on enterprise-storage profile. It additionally tunes sysctl settings regarding shared memory, semaphores and maximum number of memory map areas a process may have.
 
 .SH "FILES"
