man: minor formatting fixes
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/doc/tuned-adm.1
+++ b/doc/tuned-adm.1
@@ -20,7 +20,7 @@
 .\" 
 .TH TUNED_ADM "1" "15 Oct 2014" "Linux Programmer's Manual"
 .SH NAME
-tuned-adm \- commandline tool for switching between different tuning profiles
+tuned\-adm - commandline tool for switching between different tuning profiles
 .SH SYNOPSIS
 .B tuned-adm 
 .B 
@@ -54,13 +54,13 @@ Switch off all ktune and tuned settings and remove them from services. The confi
 
 .SH "FILES"
 .nf
-/etc/tune-profiles/*
+/etc/tune\-profiles/*
 
 .SH "SEE ALSO"
 .BR tuned (8)
-.BR tuned-profiles (7)
-.BR tuned-profiles-sap (7)
-.BR tuned-profiles-sap-hana (7)
+.BR tuned\-profiles (7)
+.BR tuned\-profiles\-sap (7)
+.BR tuned\-profiles\-sap\-hana (7)
 .SH AUTHOR
 .NF
 Marcela Mašláňová <mmaslano@redhat.com>
