--- a/doc/tuned-profiles-sap-hana.7
+++ b/doc/tuned-profiles-sap-hana.7
@@ -45,7 +45,7 @@ recieve offload for the network adapter.
 
 .SH "FILES"
 .NF
-/etc/tune-profiles/*
+/etc/tune\-profiles/*
 
 .SH "SEE ALSO"
 .BR tuned (8)
