--- a/doc/tuned.conf.5
+++ b/doc/tuned.conf.5
@@ -1,7 +1,7 @@
 .TH "tuned.conf" "5" "26 Feb 2009" "Phil Knirsch" "tuned configuration file"
 .SH "NAME"
 .LP
-\fBtuned.conf\fR \- Configuration file for \fBtuned(8)\fR.
+\fBtuned.conf\fR - Configuration file for \fBtuned(8)\fR.
 .SH "DESCRIPTION"
 .LP
 The tuned configuration file is by default found at \fB/etc/tuned.conf\fR.
@@ -49,7 +49,7 @@ between 10Mbps mode (saves power) and maximal speed mode.
 /etc/tuned.conf
 .SH "SEE ALSO"
 .LP
-tuned(8) tuned-adm(1)
+tuned(8) tuned\-adm(1)
 .SH AUTHOR
 Written by Phil Knirsch <pknirsch@redhat.com>.
 .SH REPORTING BUGS
