--- a/doc/varnetload.8
+++ b/doc/varnetload.8
@@ -1,6 +1,6 @@
 .TH "varnetload" "8" "13 Jan 2011" "Phil Knirsch" "Tool to create reproducable network traffic"
 .SH NAME
-varnetload \- tool to create reproducable network traffic
+varnetload - tool to create reproducable network traffic
 .SH SYNOPSIS
 \fBvarnetload\fP [\fI-d delay\fP] [\fI-t time to run\fP] [\fI-u url\fP]
 .SH DESCRIPTION
