--- a/doc/tuned.8
+++ b/doc/tuned.8
@@ -1,6 +1,6 @@
 .TH "tuned" "8" "25 Feb 2009" "Phil Knirsch" "Adaptive system tuning daemon"
 .SH NAME
-tuned \- dynamic adaptive system tuning daemon
+tuned - dynamic adaptive system tuning daemon
 .SH SYNOPSIS
 \fBtuned\fP [\fIoptions\fP]
 .SH DESCRIPTION
@@ -18,14 +18,14 @@ Several pre defined profiles have already been included, but new ones can easily
 be added or existing ones modified. For more details look at tuned-adm(1).
 .SH OPTIONS
 .TP 12
-.BI \-d "\fR, \fP" \--daemon
+.BI \-d "\fR, \fP" \-\-daemon
 This options starts tuned as a daemon as opposed to
 in the foreground without forking at startup.
 .TP 12
-.BI \-c "\fR, \fP" \--conffile=" conffile"
+.BI \-c "\fR, \fP" \-\-conffile=" conffile"
 Specify the name and path of the configuration file, default is \fB/etc/tuned.conf\fR.
 .TP 12
-.BI \-D "\fR, \fP" \--debug
+.BI \-D "\fR, \fP" \-\-debug
 Sets the highest logging level. This could be very useful when having trouble with tuned.
 .SH "FILES"
 .nf
@@ -34,7 +34,7 @@ Sets the highest logging level. This could be very useful when having trouble wi
 .SH "SEE ALSO"
 .LP
 tuned.conf(5)
-tuned-adm(1)
+tuned\-adm(1)
 .SH AUTHOR
 Written by Phil Knirsch <pknirsch@redhat.com>.
 .SH REPORTING BUGS
