man: more quoting fixes
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/doc/diskdevstat.8
+++ b/doc/diskdevstat.8
@@ -1,6 +1,6 @@
 .TH "diskdevstat" "8" "13 Jan 2011" "Phil Knirsch" "Tool for recording harddisk activity"
 .SH NAME
-diskdevstat \- tool for recording harddisk activity
+diskdevstat - tool for recording harddisk activity
 .SH SYNOPSIS
 \fBdiskdevstat\fP [\fIupdate interval\fP] [\fItotal duration\fP] [\fIdisplay histogram\fP]
 .SH DESCRIPTION
