--- a/doc/scomes.8
+++ b/doc/scomes.8
@@ -1,8 +1,8 @@
 .TH "scomes" "8" "13 Jan 2011" "Phil Knirsch" "Tool for watching system resources"
 .SH NAME
-scomes \- tool for watching system resources
+scomes - tool for watching system resources
 .SH SYNOPSIS
-\fBscomes\fP -c "binary [binary arguments ...]" [timer]
+\fBscomes\fP \-c "binary [binary arguments ...]" [timer]
 .SH DESCRIPTION
 \fBscomes\fR is a simple systemtap script for watching activity of one process. Syscalls count,
 userspace and kernelspace ticks, read and written bytes, transitted and received bytes and polling
