--- a/doc/tuned-adm.1
+++ b/doc/tuned-adm.1
@@ -22,7 +22,7 @@
 .SH NAME
 tuned\-adm - commandline tool for switching between different tuning profiles
 .SH SYNOPSIS
-.B tuned-adm 
+.B tuned\-adm 
 .B 
 .BR [ " help ", " list ", " active ", " profile <profile> ", " off " ]
 .br
@@ -34,7 +34,7 @@ This command line utility allows user to switch between user definable tuning pr
 .SS
 .TP
 .B help
-Print out the list of commands. It's also the default if you start tuned-adm without any commands.
+Print out the list of commands. It's also the default if you start tuned\-adm without any commands.
 
 .TP
 .B list
